src/scss/about.scss
@import "bourbon";
@import "_/grid-settings";
@import "neat";
@import '_/global';

main {
	@include outer-container;
	@include pad(0 10px 0 10px);
	.about, img {
		@include span-columns(12);
		@include media($large-viewport) {
			@include span-columns(5);
		}
	}
	img {
		@include media($large-viewport) {
			@include shift(6);
		}
	}
	.about {
		@include media($small-viewport) {
		}
		@include media($large-viewport) {
			@include shift(-11);
		}
	}
	h1 {
		font-size: 36px;
		font-weight: normal;
		margin: 25px 0 0;
		@include media($large-viewport) {
			margin-top: 0px;
		}
	}
	
}

